--- a/css/global.css
+++ b/css/global.css
@@ -46,6 +46,54 @@ body{
 .card-body h1{
     margin-bottom: 24px;
 }
+.card-body:hover{
+    color: hsl(178, 100%, 50%);
+}
+
+.content-image{
+    position: relative;
+}
+
+.image {
+    display: block;
+    width: 100%;
+    height: auto;
+    border-radius: 8px;
+  }
+  
+  .overlay {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 100%;
+    width: 100%;
+    opacity: 0;
+    transition: .5s ease;
+    background-color: hsl(178, 100%, 50%);
+    border-radius: 8px;
+  }
+  
+  .container:hover .overlay {
+      opacity: 0.7;
+    }
+
+  
+  .text {
+    color: white;
+    font-size: 20px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    text-align: center;
+  }
+
+
+
 .card-body p{
     margin-bottom: 16px;
     font-size: 16px;
@@ -100,6 +148,9 @@ body{
     display: flex;
     gap: 4px;
 }
-.profile-body p{
+.profile-body a{
     color: var(--white);
+}
+.profile-body a:hover{
+    color: hsl(178, 100%, 50%);
 }
